# ROCIM

./: BaseConfig.h  CMakeLists.txt  README.md  buffertest.h  compile_commands.json  httpTest.h  main.cpp  proTest.h
.cache/clangd/index/: BaseConfig.h.D4C0E2AC6A85252D.idx  BaseConfig.h.DFB99119C6BEA0FE.idx  ConnectionManager.cc.69367435FCAD1879.idx  ConnectionManager.cc.918C09D1C11453E4.idx  ConnectionManager.cc.9FD5CA8D30213AB9.idx  ConnectionManager.h.3D020C496EA2BF06.idx  ConnectionManager.h.BB0874BBCAC6A81D.idx  ConnectionManager.h.E2396D5369A8F835.idx  HttpClient.cpp.3729B1EAF5ECC4EF.idx  HttpClient.cpp.48AD21F177D1A7F2.idx  HttpClient.cpp.F5D8C6D4437FE968.idx  HttpClient.h.027D5322FE79858F.idx  HttpClient.h.4D2769A173077949.idx  HttpClient.h.569AF5B127609115.idx  ICoroLongConnection.h.475B77EE56F980CB.idx  ICoroLongConnection.h.97FD8BDE29303ED8.idx  ILongConnection.h.873E6BE4C8E13DCE.idx  ILongConnection.h.EC08D33B37D109EB.idx  ILongConnection.h.FCE67512D26CFC35.idx  LCManager.cc.65FD7BE967D09073.idx  LCManager.cc.F3A8A8F88B13C253.idx  LCManager.h.37C07BE9EF107A0E.idx  LCManager.h.5CC68AAB779D7E35.idx  LCModel.pb.cc.4A9F3037EF639216.idx  LCModel.pb.cc.961839D389306482.idx  LCModel.pb.h.6934109111451D8A.idx  LCModel.pb.h.B86B7A7DD7B09354.idx  LinkBuffer.cpp.236E25307C164EAF.idx  LinkBuffer.cpp.2E2A46046AE59E88.idx  LinkBuffer.cpp.3D7E9D1627593BA4.idx  LinkBuffer.h.0435BA6FA9B1CEDD.idx  LinkBuffer.h.2D91CEEF7FF757D4.idx  LinkBuffer.h.6F21FA5F0FC55673.idx  LongConnectionImpl.cpp.BE7CB08020ABBFBE.idx  LongConnectionImpl.cpp.C3EE990C3FF97A23.idx  LongConnectionImpl.cpp.C48975F1B7921A65.idx  LongConnectionImpl.h.35A4962A4102D581.idx  LongConnectionImpl.h.5F8C5071CC0E2F88.idx  LongConnectionImpl.h.84AFAF7E925BB5F3.idx  LongConnectionImpl.h.E3809DEEA2C38CC5.idx  (+69 more)
im/base/: HttpClient.cpp  HttpClient.h  ILongConnection.h  LinkBuffer.cpp  LinkBuffer.h  LongConnectionImpl.cpp  LongConnectionImpl.h  ProtobufZeroCopyInputStream.cc  ProtobufZeroCopyInputStream.h  ProtobufZeroCopyOutStream.cc  ProtobufZeroCopyOutStream.h  Utility.h  coroutine.h  noncopyable.h
im/base/lc/: LCManager.cc  LCManager.h
im/base/lc/Interface/: ICoroLongConnection.h
im/base/lc/impl/ws/: WCConnection.cc  WCConnection.h  WSConnection.cc  WSConnection.h
im/base/threadpool/: ParallelQueue.cc  ParallelQueue.h  SerialQueue.cc  SerialQueue.h  ThreadPool.cc  ThreadPool.h
im/sdk/model/: LCModel.pb.cc  LCModel.pb.h
im/sdk/model/pb/: LCModel.proto
im/sdk/net/: ConnectionManager.cc  ConnectionManager.h  LCManager.cc  LCManager.h  Request.cc  Request.h  UrlTraits.cc  UrlTraits.h
im/sdk/pb/: im.pb.cc  im.pb.h
im/sdk/pb/model/: im.proto
include/: Sample.hpp  pb  tcp_client.h
include/base/: Buffer.h  HttpClient.h  LinkBuffer.h  LinkBufferNode.h
include/net/: ILongConnection.h  LongConnection.h  LongConnectionImpl.h  NetAddress.h
include/pb/: im.pb.cc  im.pb.h  im.proto
sdk/: CMakeLists.txt
sdk/implement/net/: ConnectionManager.cc  ConnectionManager.h  Request.cc  Request.h
sdk/implement/pb/: im.pb.cc  im.pb.h  im.proto
sh/: CodeTemplate.cc  CodeTemplate.h  cfind.sh  init_e.sh  mtouch.sh  seting.text
src/: Sample.cpp
src/base/: Buffer.cpp  HttpClient.cpp  LinkBuffer.cpp  LinkBufferNode.cpp
src/net/: LongConnectionImpl.cpp  LongConnectionImpl.h
test/: RequestTest.h  ReuqestTest.h  boostCoroTest.h  buffertest.h  channelTest.h  coCostTime.h  corTest.h  httpTest.h  testwc.h
